performance tests moved outside the OSGi container